--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
 body{
     background-image: url(../img/fundo-madeira.jpg) ;
     background-position: center center;
@@ -11,17 +16,36 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
-iframe{
-    display: block;
-    margin: auto;
-    width: 400px;
-    height: 640px;
+main{
+    position: relative;
+    height: 100vh;
 }
-.img{
-    display: flex;
-    align-items: end;
+#phone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 627px;
+    width: 311px;
+    
+    transform: translate(-50%,-50%);
+    background-image: url(../img/frame-iphone.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    background-attachment: fixed;
+}
+iframe#tela{
+    position: relative;
+    top: 81px;
+    left: 22px;
+    width: 266px;
+    height: 471px;
+}
+#redes-social{
+   display: block;
 }
 img{
-    width: 10%;
-    border-radius: 100%; 
+    width: 50px;
+    border-radius: 100%;
 }
+
